# voice-speaker-recognition

./: .env.example  .gitignore  LICENSE  README.md  colors.py  pyproject.toml  requirements.txt  speaker_recognition.py  voice_assistant.py
examples/: basic_usage.py  integration_patterns.py  speaker_only.py
